#6 refactor, extract method calls from repo to service