@@ -4,73 +4,24 @@ import com.community.bitcoinwallet.model.WalletEntry;
 import com.community.bitcoinwallet.util.DateAndAmountUtils;
 import lombok.AccessLevel;
 import lombok.experimental.FieldDefaults;
-import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.annotation.PreDestroy;
-import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.Instant;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
-import static com.community.bitcoinwallet.util.DateAndAmountUtils.atStartOfHour;
+import static com.community.bitcoinwallet.repository.WalletRepositoryMappersConstants.*;
+
 
 @FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
-public class H2WalletRepository implements WalletRepository {
+public class H2WalletRepository {
 
-    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ssXXX");
-
-    public static final RowMapper<WalletEntry> ROW_MAPPER = (rs, rowNum) ->
-        new WalletEntry(Instant.ofEpochMilli(rs.getLong("ts")),
-            rs.getBigDecimal("bitcoins").setScale(8, RoundingMode.HALF_UP));
-
-    public static final RowMapper<WalletEntry> ROW_MAPPER_WITH_DATE = (rs, rowNum) ->
-        new WalletEntry(ZonedDateTime.parse(rs.getString("date_hour"), FORMATTER).toInstant(),
-            rs.getBigDecimal("bitcoins").setScale(8, RoundingMode.HALF_UP));
-
-    public static final RowMapper<WalletEntry> ROW_MAPPER_WITH_SUM = (rs, rowNum) ->
-        new WalletEntry(null, rs.getBigDecimal("bitcoins").setScale(8, RoundingMode.HALF_UP));
-
-    private static final String WALLET = "WALLET";
-    private static final String BALANCE = "BALANCE";
-    private static final String BALANCE_QUEUE = "BALANCE_UPDATE_QUEUE";
-
-    private static final String TS_AT_START_OF_HOUR =
-        "FORMATDATETIME(DATEADD('MILLISECOND', ts, DATE '1970-01-01'),'YYYY-MM-dd HH:00:00+00:00')";
-    private static final String INSERT = "insert into %s(ts,bitcoins) " +
-        " values(:ts, :bitcoins)";
-    private static final String CLEAR = "delete from %s where 1=1";
-
-    // sync requests
-    private static final String SELECT_BALANCE_SUM = "select SUM(bitcoins) as bitcoins from WALLET " +
-        "where ts < :ts " +
-        "group by 1";
-    private static final String SELECT_BALANCE_SUM_IN_RANGE = "select " +
-        TS_AT_START_OF_HOUR + " as date_hour, SUM(bitcoins) as bitcoins from WALLET " +
-        "where ts >= :from and ts < :to " +
-        " group by " + TS_AT_START_OF_HOUR +
-        " order by date_hour";
-
-    private static final String SELECT_BALANCE_TIME_RANGE = "select ts,bitcoins from BALANCE " +
-        "where (ts > :from and ts < :to) or ts = :to";
     private static final String COUNT_BALANCES = "select count(*) c from BALANCE";
     private static final String SELECT_BALANCES_FOR_UPDATE = "select ts,bitcoins from BALANCE " +
         "where (ts > :from) limit :limit";
-    private static final String SELECT_MAX_BALANCE_BEFORE_TIME_RANGE = "select ts,bitcoins from BALANCE " +
-        "where (ts <= :from) " +
-        "order by ts desc " +
-        "limit 1";
     private static final String SELECT_LAST_BALANCE = "select ts, bitcoins from BALANCE " +
         "order by ts desc " +
         "limit 1";
@@ -89,97 +40,62 @@ public class H2WalletRepository implements WalletRepository {
         "limit 1";
     private static final String DELETE_FROM_QUEUE = "delete from BALANCE_UPDATE_QUEUE where id=:id";
 
-    boolean asyncBalanceCalculation;
     NamedParameterJdbcTemplate jdbcTemplate;
-    ScheduledExecutorService executorService;
-    int batchSelectLimit;
 
-    public H2WalletRepository(boolean asyncBalanceCalculation,
-                              NamedParameterJdbcTemplate jdbcTemplate,
-                              long millisPeriod, int batchSelectLimit) {
+    public H2WalletRepository(NamedParameterJdbcTemplate jdbcTemplate) {
         this.jdbcTemplate = jdbcTemplate;
-        this.asyncBalanceCalculation = asyncBalanceCalculation;
-        this.batchSelectLimit = batchSelectLimit;
-        if (asyncBalanceCalculation) {
-            this.executorService = Executors.newSingleThreadScheduledExecutor();
-            executorService.scheduleAtFixedRate(this::updateBalancesFromQueue, 0,
-                millisPeriod, TimeUnit.MILLISECONDS);
-        } else {
-            executorService = null;
-        }
     }
 
-    @Override
     @Transactional
     public void addEntry(WalletEntry entry) {
         Map<String, Object> values = Map.of("ts", entry.getDatetime().toEpochMilli(),
             "bitcoins", entry.getAmount());
         jdbcTemplate.update(String.format(INSERT, WALLET), values);
-        if (asyncBalanceCalculation) {
-            jdbcTemplate.update(String.format(INSERT, BALANCE_QUEUE), values);
-        }
+        jdbcTemplate.update(String.format(INSERT, BALANCE_QUEUE), values);
     }
 
-    @Override
-    public List<WalletEntry> getBalancesByHour(Instant fromExclusive, Instant toInclusive) {
-        return asyncBalanceCalculation ? getBalancesByHourAsync(fromExclusive, toInclusive) :
-            getBalancesByHourSync(fromExclusive, toInclusive);
+    @Transactional
+    public void clear() {
+        jdbcTemplate.update(String.format(CLEAR, WALLET), Collections.emptyMap());
+        jdbcTemplate.update(String.format(CLEAR, BALANCE), Collections.emptyMap());
+        jdbcTemplate.update(String.format(CLEAR, BALANCE_QUEUE), Collections.emptyMap());
     }
 
-    private List<WalletEntry> getBalancesByHourSync(Instant from, Instant to) {
-        Instant fromAtStart = atStartOfHour(from);
-        Instant toStart = atStartOfHour(to);
-        WalletEntry beforeFrom = getSumBeforeFrom(fromAtStart);
-        BigDecimal[] incrementHolder = new BigDecimal[]{beforeFrom.getAmount()};
-        List<WalletEntry> balanceByHour = getSumInRangeByHour(fromAtStart, toStart)
-            .stream()
-            .map(e -> {
-                BigDecimal increment = incrementHolder[0];
-                BigDecimal amount = e.getAmount().add(increment);
-                incrementHolder[0] = increment.add(e.getAmount());
-                return new WalletEntry(e.getDatetime().plus(1, ChronoUnit.HOURS), amount);
-            })
-            .collect(Collectors.toCollection(LinkedList::new));
-        balanceByHour.add(0, beforeFrom);
-        return balanceByHour;
-    }
-
-    private List<WalletEntry> getSumInRangeByHour(Instant fromAtStart, Instant toAtStart) {
-        return jdbcTemplate.query(SELECT_BALANCE_SUM_IN_RANGE,
+    public List<WalletEntry> getWalletSumInRangeByHour(Instant fromAtStart, Instant toAtStart) {
+        return jdbcTemplate.query("select " +
+                TS_AT_START_OF_HOUR + " as date_hour, SUM(bitcoins) as bitcoins from WALLET " +
+                "where ts >= :from and ts < :to " +
+                " group by " + TS_AT_START_OF_HOUR +
+                " order by date_hour",
             Map.of("from", fromAtStart.toEpochMilli(),
                 "to", toAtStart.toEpochMilli()), ROW_MAPPER_WITH_DATE);
     }
 
-    private WalletEntry getSumBeforeFrom(Instant fromAtStart) {
-        List<WalletEntry> ts = jdbcTemplate.query(SELECT_BALANCE_SUM,
+    public WalletEntry getWalletSumBeforeFrom(Instant fromAtStart) {
+        List<WalletEntry> ts = jdbcTemplate.query(
+            "select SUM(bitcoins) as bitcoins from WALLET " +
+                "where ts < :ts " +
+                "group by 1",
             Map.of("ts", fromAtStart.toEpochMilli()), ROW_MAPPER_WITH_SUM);
         return ts.stream().findFirst()
             .map(w -> new WalletEntry(fromAtStart, w.getAmount()))
             .orElse(new WalletEntry(fromAtStart, DateAndAmountUtils.toBigDecimal(0.0)));
     }
 
-    private List<WalletEntry> getBalancesByHourAsync(Instant fromExclusive, Instant toInclusive) {
-        List<WalletEntry> res = new LinkedList<>(jdbcTemplate.query(SELECT_BALANCE_TIME_RANGE,
+    public List<WalletEntry> getBalancesWithinRange(Instant fromExclusive, Instant toInclusive) {
+        return jdbcTemplate.query("select ts,bitcoins from BALANCE " +
+                "where (ts > :from and ts < :to) or ts = :to",
             Map.of("from", fromExclusive.toEpochMilli(),
-                "to", toInclusive.toEpochMilli()), ROW_MAPPER));
-
-        Instant instant = DateAndAmountUtils.atStartOfHour(fromExclusive);
-        if (res.isEmpty() || res.get(0).getDatetime().isAfter(instant)) {
-            List<WalletEntry> beforTimeRange = jdbcTemplate.query(SELECT_MAX_BALANCE_BEFORE_TIME_RANGE,
-                Map.of("from", fromExclusive.toEpochMilli()), ROW_MAPPER);
-            res.add(0, beforTimeRange.isEmpty() ?
-                new WalletEntry(instant, DateAndAmountUtils.toBigDecimal("0.0")) :
-                beforTimeRange.get(0));
-        }
-        return res;
+                "to", toInclusive.toEpochMilli()), ROW_MAPPER);
     }
 
-    @Override
-    @Transactional
-    public void clear() {
-        jdbcTemplate.update(String.format(CLEAR, WALLET), Collections.emptyMap());
-        jdbcTemplate.update(String.format(CLEAR, BALANCE), Collections.emptyMap());
-        jdbcTemplate.update(String.format(CLEAR, BALANCE_QUEUE), Collections.emptyMap());
+    public Optional<WalletEntry> getBalanceBeforeRange(Instant from) {
+        return jdbcTemplate.query("select ts,bitcoins from BALANCE " +
+                "where (ts <= :from) " +
+                "order by ts desc " +
+                "limit 1",
+            Map.of("from", from.toEpochMilli()), ROW_MAPPER)
+            .stream().findFirst();
     }
 
     @Transactional
@@ -238,7 +154,7 @@ public class H2WalletRepository implements WalletRepository {
 
     private List<WalletEntry> selectNextBatchOfBalances(Instant ts) {
         return jdbcTemplate.query(SELECT_BALANCES_FOR_UPDATE,
-            Map.of("from", ts.toEpochMilli(), "limit", batchSelectLimit), ROW_MAPPER);
+            Map.of("from", ts.toEpochMilli(), "limit", 0), ROW_MAPPER);
     }
 
     private void updateBalances(List<WalletEntry> balancesToUpdate) {
@@ -253,13 +169,6 @@ public class H2WalletRepository implements WalletRepository {
         Map<String, ? extends Number> values = Map.of("ts", entry.getDatetime().toEpochMilli(),
             "bitcoins", entry.getAmount());
         jdbcTemplate.update(String.format(INSERT, BALANCE), values);
-    }
-
-    @PreDestroy
-    public void shutDownExecutor() {
-        if (asyncBalanceCalculation) {
-            executorService.shutdownNow();
-        }
     }
 
 }
